name:                  ejstand
version:               0.3.1
synopsis:              Ejudge Configurable Web Standings Daemon for Multiple Contests
homepage:              https://apathism.net/git/apathism/ejstand
bug-reports:           https://apathism.net/git/apathism/ejstand/issues
license:               AGPL-3
license-file:          LICENSE
author:                Ivan Koryabkin <apathism@apathism.net>
maintainer:            Ivan Koryabkin <apathism@apathism.net>
copyright:             (c) 2018 Ivan Koryabkin
category:              Web
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:                git
  location:            https://apathism.net/git/apathism/ejstand.git

executable ejstand
  main-is:             Main.hs
  build-depends:
                       -- Basic data types & utilities
                       base, bytestring, containers, safe, text,
                       -- Time measuring
                       clock, time,
                       -- Filesystem & Network tools
                       directory, file-embed, http-types, wai, warp,
                       -- Parsers & Template Engines
                       blaze-html, shakespeare, xml-conduit,
                       -- Other
                       binary, mtl
  ghc-options:         -O2
  hs-source-dirs:      src
  other-modules:       EjStand
                       EjStand.BaseModels
                       EjStand.ConfigParser
                       EjStand.DataParser
                       EjStand.HtmlRenderer
                       EjStand.InternalsCore
                       EjStand.LegalCredits
                       EjStand.StandingBuilder
                       EjStand.StandingModels
                       EjStand.WebApplication
                       Paths_ejstand
  default-language:    Haskell2010
