name:                  ejstand
version:               0.5.0
synopsis:              Ejudge Configurable Web Standings Daemon for Multiple Contests
homepage:              https://apathism.net/git/apathism/ejstand
bug-reports:           https://apathism.net/git/apathism/ejstand/issues
license:               AGPL-3
license-file:          LICENSE
author:                Ivan Koryabkin <apathism@apathism.net>
maintainer:            Ivan Koryabkin <apathism@apathism.net>
copyright:             (c) 2018 Ivan Koryabkin
category:              Web
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:                git
  location:            https://apathism.net/git/apathism/ejstand.git

executable ejstand
  main-is:             Main.hs
  build-depends:
                       -- Basic data types & utilities
                       base, bytestring, containers, safe, split, text,
                       -- Time measuring
                       clock, time,
                       -- Filesystem & Network tools
                       directory-tree, file-embed, http-types, wai, warp,
                       -- Command-line interfaces
                       optparse-applicative,
                       -- Parsers & Template Engines
                       blaze-html, blaze-markup, text-icu, shakespeare, xeno,
                       -- Other
                       binary, transformers, template-haskell
  ghc-options:         -O2 -threaded -Wall -Wno-name-shadowing -Wno-orphans
  hs-source-dirs:      src
  other-modules:       EjStand
                       EjStand.CLI
                       EjStand.Internals.ADTReader
                       EjStand.Internals.Core
                       EjStand.Internals.ELang.AST
                       EjStand.Internals.ELang.Lexer
                       EjStand.Internals.ELang.Syntax
                       EjStand.Internals.ELang.Value
                       EjStand.Internals.Regex
                       EjStand.Models.Base
                       EjStand.Models.Standing
                       EjStand.Parsers.Configuration
                       EjStand.Parsers.Data
                       EjStand.Parsers.EjudgeOptions
                       EjStand.StandingBuilder
                       EjStand.Web.HtmlElements
                       EjStand.Web.LegalPage
                       EjStand.Web.MainPage
                       EjStand.Web.Server
                       Paths_ejstand
  default-language:    Haskell2010
